# algos

./: .gitmodules  .travis.yml  README.md  travis.sh
data-structures/: .travis.yml  CMakeLists.txt  README.md  travis.sh
data-structures/binarysearchtree/: CMakeLists.txt  binarysearchtree.h
data-structures/dynamicarray/: CMakeLists.txt  CMakeLists.txt.old  dynamicarray.h  dynamicarray.hpp
data-structures/heap/: CMakeLists.txt  heap.h
data-structures/linkedlist/: CMakeLists.txt  linkedlist.h  linkedlist.hpp  list.h  list.hpp
data-structures/queue/: CMakeLists.txt  queue.h  queue.hpp
data-structures/stack/: CMakeLists.txt  stack.h  stack.hpp
data-structures/unittests/: CMakeLists.txt
data-structures/unittests/testbinarysearchtree/: CMakeLists.txt  binarysearchtree_test.cpp  binarysearchtree_test.h
data-structures/unittests/testdoublelinkedlist/: CMakeLists.txt  list_test.cpp  list_test.h
data-structures/unittests/testdynamicarray/: CMakeLists.txt  dynamicarray_test.cpp  dynamicarray_test.h  main.cpp
data-structures/unittests/testheap/: CMakeLists.txt  heap_test.cpp  heap_test.h  main.cpp
data-structures/unittests/testlinkedlist/: CMakeLists.txt  linkedlist_test.cpp  linkedlist_test.h
data-structures/unittests/testqueue/: CMakeLists.txt  main.cpp  queue_test.cpp  queue_test.h
data-structures/unittests/teststack/: CMakeLists.txt  stack_test.cpp  stack_test.h
