CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(DataStructures)
INCLUDE(gtest.cmake)
FIND_PACKAGE(Threads)

MESSAGE("Processing Top Level CMakeLists.txt")

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

#Enable testing
ENABLE_TESTING()

ADD_SUBDIRECTORY(unittests)
ADD_SUBDIRECTORY(dynamicarray)
ADD_SUBDIRECTORY(linkedlist)
ADD_SUBDIRECTORY(stack)
ADD_SUBDIRECTORY(queue)
